sync.RWMutex 修改说明

--- a/golang/sync.RWMutex.org
+++ b/golang/sync.RWMutex.org
@@ -1,3 +1,9 @@
+这个例子，程序况会panic，协程B为了获取写锁会等待读的释放，因此会进入睡眠。
+协程A在for循环中，获取读锁时，看到其它线程正在尝试获取写锁，因此也会进
+入睡眠等待A协程。A协程本来就持有一人读锁，进入睡眠后无法释放形成死锁。
+进程panic.
+
+
 #+begin_src golang
 
 // main.go
@@ -52,12 +58,9 @@ func main() {
 
 
 #+end_src
-这种情程序况会panic，协程B为了获取写锁会等待读的释放，因此会进入睡眠。
-协程A在for循环中，获取读锁时，看到其它线程正在尝试获取写锁，因此也会进
-入睡眠等待A协程。A协程本来就持有一人读锁，进入睡眠后无法释放形成死锁。
-进程panic.
 
 
+结果：
 #+begin_src plaintext
 read lock i: 0  a: 1
 read lock i: 1  a: 1
